envoy.old.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: edge
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            virtual_hosts:
            - name: all_domains
              domains: ["*"]
              routes:
              - match:
                  prefix: "/api/Project/"
                route:
                  cluster: accountpage-service
              - match:
                  prefix: "/api/Create/"
                route:
                  cluster: createpage
  clusters:
    - name: accountpage-service
      connect_timeout: 5s
      lb_policy: ROUND_ROBIN
      type: strict_dns
      load_assignment:
        cluster_name: accountpage-service
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: "accountpage-service"
                  port_value: 80
